app.log
file:///home/droid/.npm/_npx/9ed06546b0653f96/node_modules/vite/bin/vite.js:51
    module.enableCompileCache?.()
                              ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
    at async link (internal/modules/esm/module_job.js:42:21)
